DTSPB-4361 Preserve Executor name name insertion order